--- a/YukariProject/Yukari/src/main/AndroidManifest.xml
+++ b/YukariProject/Yukari/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="shibafu.yukari"
     android:installLocation="auto"
     android:versionCode="35"
-    android:versionName="1.1.0.183 (ensemble 150107)" >
+    android:versionName="1.1.0.184 (ensemble 150108)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -237,8 +237,11 @@
         <activity-alias
             android:name=".plugin.OpenTwilogActivity"
             android:targetActivity=".plugin.UserPluginActivity"
-            android:label="twilogを開く">
+            android:label="twilogを開く"
+            android:icon="@drawable/ic_twilog">
             <meta-data android:name="shibafu.yukari.PLUGIN_SHORT_LABEL" android:value="twilog"/>
+            <meta-data android:name="shibafu.yukari.PLUGIN_LIGHT_ICON" android:resource="@drawable/ic_twilog"/>
+            <meta-data android:name="shibafu.yukari.PLUGIN_DARK_ICON" android:resource="@drawable/ic_twilog_d"/>
             <intent-filter>
                 <action android:name="jp.r246.twicca.ACTION_SHOW_USER"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -255,8 +258,11 @@
         <activity-alias
             android:name=".plugin.OpenFavstarActivity"
             android:targetActivity=".plugin.UserPluginActivity"
-            android:label="Favstarを開く">
+            android:label="Favstarを開く"
+            android:icon="@drawable/ic_favorite_m">
             <meta-data android:name="shibafu.yukari.PLUGIN_SHORT_LABEL" android:value="Favstar"/>
+            <meta-data android:name="shibafu.yukari.PLUGIN_LIGHT_ICON" android:resource="@drawable/ic_favorite_m"/>
+            <meta-data android:name="shibafu.yukari.PLUGIN_DARK_ICON" android:resource="@drawable/ic_favorite_m_d"/>
             <intent-filter>
                 <action android:name="jp.r246.twicca.ACTION_SHOW_USER"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -273,8 +279,11 @@
         <activity-alias
             android:name=".plugin.OpenAclogUserActivity"
             android:targetActivity=".plugin.UserPluginActivity"
-            android:label="aclogを開く">
+            android:label="aclogを開く"
+            android:icon="@drawable/ic_aclog">
             <meta-data android:name="shibafu.yukari.PLUGIN_SHORT_LABEL" android:value="aclog"/>
+            <meta-data android:name="shibafu.yukari.PLUGIN_LIGHT_ICON" android:resource="@drawable/ic_aclog"/>
+            <meta-data android:name="shibafu.yukari.PLUGIN_DARK_ICON" android:resource="@drawable/ic_aclog_d"/>
             <intent-filter>
                 <action android:name="jp.r246.twicca.ACTION_SHOW_USER"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -322,6 +331,10 @@
                 <data android:scheme="http" android:host="twpf.jp"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activity.IntentChooserActivity"
+            android:theme="@style/YukariDarkDialogTheme"/>
    </application>
 
 </manifest>
