--- a/YukariProject/Yukari/src/main/AndroidManifest.xml
+++ b/YukariProject/Yukari/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="shibafu.yukari"
     android:installLocation="auto"
     android:versionCode="36"
-    android:versionName="1.1.0.185α (rehearsal 150111)" >
+    android:versionName="1.1.0.186α (rehearsal 150114)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -335,6 +335,10 @@
         <activity
             android:name=".activity.IntentChooserActivity"
             android:theme="@style/YukariDarkDialogTheme"/>
+
+        <receiver
+            android:name=".receiver.VoiceReplyReceiver"
+            android:exported="false"/>
    </application>
 
 </manifest>
