--- a/YukariProject/Yukari/src/main/AndroidManifest.xml
+++ b/YukariProject/Yukari/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="shibafu.yukari"
     android:installLocation="auto"
-    android:versionCode="40"
-    android:versionName="1.1.0.192α (rehearsal 150213)" >
+    android:versionCode="41"
+    android:versionName="1.1.0.193 (ensemble 150216)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
