--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:shibafu528/GalleryMultiPicker.git
 [submodule "twpfparser"]
 	path = twpfparser
-	url = https://github.com/shibafu528/twpfparser.git
+	url = git@github.com:shibafu528/twpfparser.git
