--- a/YukariProject/Yukari/src/main/AndroidManifest.xml
+++ b/YukariProject/Yukari/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="shibafu.yukari"
+    package="shibafu.yukari.af2015"
     android:installLocation="auto"
-    android:versionCode="42"
-    android:versionName="1.1.1.195 (ensemble 150321)" >
+    android:versionCode="43"
+    android:versionName="aprilfool 2015 (base y4a-ensemble-1.1.1.195)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -56,7 +56,7 @@
 
         <service android:name="shibafu.yukari.service.TwitterService" />
         <service
-            android:name=".service.CacheCleanerService"
+            android:name="shibafu.yukari.service.CacheCleanerService"
             android:process=":cleaner"/>
 
         <activity
@@ -73,7 +73,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.TweetShortcutActivity"
+            android:name="shibafu.yukari.activity.TweetShortcutActivity"
             android:label="@string/title_activity_tweet"
             android:icon="@drawable/ic_launcher_tweet"
             android:theme="@style/AppThemeTranslucent">
@@ -81,7 +81,7 @@
                 <action android:name="android.intent.action.CREATE_SHORTCUT"/>
             </intent-filter>
         </activity>
-        <service android:name=".service.PostService"/>
+        <service android:name="shibafu.yukari.service.PostService"/>
 
         <activity
             android:name="shibafu.yukari.activity.StatusActivity"
@@ -89,7 +89,7 @@
             android:theme="@style/YukariLightTheme.Translucent" >
         </activity>
         <activity
-            android:name=".activity.IntentActivity"
+            android:name="shibafu.yukari.activity.IntentActivity"
             android:theme="@android:style/Theme.NoDisplay" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -151,7 +151,7 @@
         </activity>
 
         <activity
-            android:name=".plugin.MorseInputActivity"
+            android:name="shibafu.yukari.plugin.MorseInputActivity"
             android:icon="@drawable/ic_launcher_morse"
             android:label="@string/title_morse_input"
             android:theme="@style/AppThemeTranslucent" >
@@ -163,58 +163,58 @@
         </activity>
 
         <activity
-            android:name=".activity.SNPickerActivity"
+            android:name="shibafu.yukari.activity.SNPickerActivity"
             android:label="@string/title_activity_snpicker"
             android:theme="@style/YukariLightDialogTheme">
         </activity>
 
-        <receiver android:name=".receiver.StubReceiver"/>
+        <receiver android:name="shibafu.yukari.receiver.StubReceiver"/>
 
         <activity
-            android:name=".activity.TraceActivity"
+            android:name="shibafu.yukari.activity.TraceActivity"
             android:theme="@style/AppDialogThemeWhenLarge"
             android:label="Trace" />
 
         <activity
-            android:name=".activity.PreviewActivity"
+            android:name="shibafu.yukari.activity.PreviewActivity"
             android:theme="@style/AppThemeTranslucentBg"/>
         <activity
-            android:name=".activity.MoviePreviewActivity"
+            android:name="shibafu.yukari.activity.MoviePreviewActivity"
             android:theme="@style/AppThemeTranslucentBg"/>
 
         <activity
-            android:name=".activity.AccountChooserActivity"
+            android:name="shibafu.yukari.activity.AccountChooserActivity"
             android:theme="@style/YukariDialogTheme"
             android:label="@string/title_activity_accountchooser"/>
 
         <activity
-            android:name=".activity.AccountManageActivity"
+            android:name="shibafu.yukari.activity.AccountManageActivity"
             android:label="@string/title_activity_accountmanage"/>
 
         <activity
-            android:name=".activity.ConfigActivity"
+            android:name="shibafu.yukari.activity.ConfigActivity"
             android:label="@string/title_activity_config"/>
 
         <activity
-            android:name=".activity.MuteActivity"
+            android:name="shibafu.yukari.activity.MuteActivity"
             android:label="@string/title_activity_mute"/>
 
         <activity
-            android:name=".activity.AutoMuteActivity"
+            android:name="shibafu.yukari.activity.AutoMuteActivity"
             android:label="@string/title_activity_auto_mute"/>
 
         <activity
-            android:name=".activity.FontSelectorActivity"
+            android:name="shibafu.yukari.activity.FontSelectorActivity"
             android:label="@string/title_activity_font_selector"/>
 
-        <activity android:name=".activity.CommandsPrefActivity"/>
+        <activity android:name="shibafu.yukari.activity.CommandsPrefActivity"/>
 
         <activity
-            android:name=".activity.LicenseActivity"
+            android:name="shibafu.yukari.activity.LicenseActivity"
             android:label="@string/title_activity_about" />
 
         <activity
-            android:name=".activity.ProfileEditActivity"
+            android:name="shibafu.yukari.activity.ProfileEditActivity"
             android:label="@string/title_activity_profile_edit"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:uiOptions="splitActionBarWhenNarrow">
@@ -224,11 +224,11 @@
         </activity>
 
         <activity
-            android:name=".activity.TabEditActivity"
+            android:name="shibafu.yukari.activity.TabEditActivity"
             android:label="@string/title_activity_column_edit" />
 
         <activity
-            android:name=".plugin.OpenAclogActivity"
+            android:name="shibafu.yukari.plugin.OpenAclogActivity"
             android:label="@string/title_activity_open_aclog">
             <intent-filter>
                 <action android:name="jp.r246.twicca.ACTION_SHOW_TWEET"/>
@@ -238,11 +238,11 @@
         </activity>
         
         <activity
-            android:name=".plugin.UserPluginActivity"
+            android:name="shibafu.yukari.plugin.UserPluginActivity"
             android:theme="@style/AppThemeTranslucent"/>
         <activity-alias
-            android:name=".plugin.OpenTwilogActivity"
-            android:targetActivity=".plugin.UserPluginActivity"
+            android:name="shibafu.yukari.plugin.OpenTwilogActivity"
+            android:targetActivity="shibafu.yukari.plugin.UserPluginActivity"
             android:label="@string/title_activity_open_twilog"
             android:icon="@drawable/ic_twilog">
             <meta-data android:name="shibafu.yukari.PLUGIN_SHORT_LABEL" android:value="twilog"/>
@@ -262,8 +262,8 @@
             </intent-filter>
         </activity-alias>
         <activity-alias
-            android:name=".plugin.OpenFavstarActivity"
-            android:targetActivity=".plugin.UserPluginActivity"
+            android:name="shibafu.yukari.plugin.OpenFavstarActivity"
+            android:targetActivity="shibafu.yukari.plugin.UserPluginActivity"
             android:label="@string/title_activity_open_favstar"
             android:icon="@drawable/ic_favorite_m">
             <meta-data android:name="shibafu.yukari.PLUGIN_SHORT_LABEL" android:value="Favstar"/>
@@ -283,8 +283,8 @@
             </intent-filter>
         </activity-alias>
         <activity-alias
-            android:name=".plugin.OpenAclogUserActivity"
-            android:targetActivity=".plugin.UserPluginActivity"
+            android:name="shibafu.yukari.plugin.OpenAclogUserActivity"
+            android:targetActivity="shibafu.yukari.plugin.UserPluginActivity"
             android:label="@string/title_activity_open_aclog_user"
             android:icon="@drawable/ic_aclog">
             <meta-data android:name="shibafu.yukari.PLUGIN_SHORT_LABEL" android:value="aclog"/>
@@ -305,13 +305,13 @@
         </activity-alias>
 
         <activity
-            android:name=".activity.UserSearchActivity"
+            android:name="shibafu.yukari.activity.UserSearchActivity"
             android:theme="@style/YukariSearchTheme"
             android:label="@string/title_activity_user_search"
             android:windowSoftInputMode="adjustResize"/>
 
         <activity
-            android:name=".activity.MaintenanceActivity"
+            android:name="shibafu.yukari.activity.MaintenanceActivity"
             android:label="Maintenance Mode" />
 
         <activity
@@ -327,7 +327,7 @@
         </activity>
 
         <activity
-            android:name=".activity.TwpfActivity"
+            android:name="shibafu.yukari.activity.TwpfActivity"
             android:label="ツイフィール ビューア">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -339,7 +339,7 @@
         </activity>
 
         <activity
-            android:name=".activity.IntentChooserActivity"
+            android:name="shibafu.yukari.activity.IntentChooserActivity"
             android:theme="@style/YukariDarkDialogTheme"/>
    </application>
 
