--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="shibafu.yukari"
     android:installLocation="auto"
-    android:versionCode="43"
-    android:versionName="1.1.2.196 (ensemble 150329)" >
+    android:versionCode="44"
+    android:versionName="1.1.3.197 (ensemble 150331)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -341,6 +341,8 @@
         <activity
             android:name=".activity.IntentChooserActivity"
             android:theme="@style/YukariDarkDialogTheme"/>
+
+        <activity android:name=".activity.BookmarkRepairActivity"/>
    </application>
 
 </manifest>
