--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@
 /YukariProject/local.properties
 /YukariProject/.idea/workspace.xml
 /YukariProject/.idea/libraries
+/YukariProject/Yukari/*.apk
 .directory
