MainActivityを画面回転で殺さないようにした（妥協）

--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity
             android:name="shibafu.yukari.activity.MainActivity"
             android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
