ショートカットから起動した時にタスクが分離するようにした

--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -65,7 +65,8 @@
         <activity
             android:name="shibafu.yukari.activity.TweetActivity"
             android:label="@string/title_activity_tweet"
-            android:theme="@style/VertAnimationTheme" >
+            android:theme="@style/VertAnimationTheme"
+            android:taskAffinity=".tweet">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
