バックアップ機能の見た目モック

--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -367,6 +367,10 @@
         <activity
             android:name=".activity.PluggaloidOutputActivity"
             android:label="@string/title_activity_pluggaloid_output"/>
+
+	<activity
+            android:name=".activity.BackupActivity"
+            android:label="@string/title_activity_backup"/>
    </application>
 
 </manifest>
