--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':Yukari'
+include ':yukari-exvoice'
 include ':GalleryMultiPicker:library'
 include ':betterpickers'
 include ':twpfparser'
