--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
 
                 <data android:mimeType="vnd.shibafu.yukari/hash" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts"/>
         </activity>
         <activity
             android:name="shibafu.yukari.activity.OAuthActivity"
