exportToJsonが全く動かなかったので一応動くようにした

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 
-kotlin.incremental=true
+#kotlin.incremental=true
