タブ編集画面用のテーマ設定忘れ

--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -23,8 +23,8 @@ ext {
 
 dependencies {
     // Support & Play Services
-    compile 'com.android.support:appcompat-v7:22.1.+'
-    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
     compile "com.google.android.gms:play-services-plus:${playServicesVersion}"
     compile "com.google.android.gms:play-services-drive:${playServicesVersion}"
 
