--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ include ':Yukari'
 include ':yukari-exvoice'
 include ':GalleryMultiPicker:library'
 include ':twpfparser'
+include ':yukari-processor-runtime'
+include ':yukari-processor'
